<?xml version="1.0"?>
<package format="2">
  <name>chicken_head</name>
  <version>0.1.0</version>
  <description>Chicken Head Demo</description>

  <maintainer email="juan@todo.todo">juan</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>roscpp</depend>
  <depend>champ_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>eigen</depend>

  <exec_depend>numpy</exec_depend>
</package>
